--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="bofapp">
+<html ng-app="ocellus">
 
 <head>
   <meta charset="utf-8">
-  <title>Map thingy
+  <title>{{strings.app_name}}
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
@@ -25,10 +25,6 @@
 
   <link rel="stylesheet" href="bower_components/leaflet-draw/dist/leaflet.draw.css">
   <script src="bower_components/leaflet-draw/dist/leaflet.draw.js"></script>
-
-
-
-
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/factories.js"></script>
@@ -48,6 +44,7 @@
 </head>
 
 <body ng-controller="mapController" style="padding-top:50px">
+
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -58,21 +55,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">MBof</a>
+        <a class="navbar-brand" href="#">{{strings.app_name}}</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="" ng-click="bofIt()">BofIt</a></li>
+          <li><a href="" ng-click="bofIt()">{{strings.app_action}}</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
               <li><a href="#" id="cat1">Cat 1</a></li>
               <li><a href="#" id="cat2">Cat 2</a></li>
               <li><a href="#" id="cat3">Cat 3</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#" id="all">All categories</a></li>
+              <li><a href="#" id="all">All {{strings.app_categories}}</a></li>
 
             </ul>
           </li>
@@ -105,16 +102,16 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="bofModalLabel">Bof it!</h4>
+          <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
         </div>
         <div class="modal-body">
           <div class="form-group">
-            <label for="messageText">What is this about</label>
+            <label for="messageText">{{strings.modal_description}}</label>
             <span class="req-text label label-danger" style="display:none">(required)</span>
             <textarea ng-model="newMessageText" class="form-control" id="messageText" rows="3" required></textarea>
           </div>
           <div class="form-group">
-            <label for="category">Category</label>
+            <label for="category">{{strings.app_categories}}</label>
             <select class="form-control" id="category" ng-model="categories">
               <option value="cat1">Cat 1</option>
               <option value="cat2">Cat 2</option>
@@ -123,17 +120,17 @@
           </div>
 
           <div class="form-group">
-            <label for="startTime">Start time</label>
+            <label for="startTime">{{strings.modal_starttime}}</label>
             <input id="newStartTime" ng-model="newStartTime" name="startTime" class="form-control" type="datetime-local">
           </div>
           <div class="form-group">
-            <label for="startTime">End time</label>
+            <label for="startTime">{{strings.modal_endtime}}</label>
             <input id="newEndTime" ng-model="newEndTime" name="endTime" class="form-control" type="datetime-local">
           </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="postBof">Post BOF</button>
+          <button type="button" class="btn btn-primary" id="postBof">{{strings.modal_post}}</button>
         </div>
       </div>
     </div>
