--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -27,10 +27,16 @@
   <script src="bower_components/leaflet-draw/dist/leaflet.draw.js"></script>
   <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
+
+  <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+  <script src="../bower_components/leaflet-plugins/layer/tile/Google.js"></script>
+
+
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/factories.js"></script>
   <script src="js/utils.js"></script>
+
 
   <style media="screen">
     body {
@@ -96,6 +102,7 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
+
   <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
 
   <!-- Modal -->
