--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -28,7 +28,7 @@
   <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
 
-  <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+  <script src="http://maps.google.com/maps/api/js?v=3.22"></script>
   <script src="../bower_components/leaflet-plugins/layer/tile/Google.js"></script>
 
 
