--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -6,6 +6,7 @@
   <title>{{strings.app_name}}
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/custom.css" media="screen" title="no title" charset="utf-8">
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
@@ -50,7 +51,7 @@
   </style>
 </head>
 
-<body ng-controller="mapController" style="padding-top:50px">
+<body ng-controller="mapController">
 
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -113,9 +114,9 @@
           <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
         </div>
         <div class="modal-body">
-          <div class="form-group">
+          <div class="form-group messageText">
             <label for="messageText">{{strings.modal_description}}</label>
-            <span class="req-text label label-danger" style="display:none">(required)</span>
+            <span class="req-text">(required)</span>
             <textarea ng-model="newMessageText" class="form-control" id="messageText" rows="3" required></textarea>
           </div>
           <div class="form-group">
@@ -127,13 +128,15 @@
             </select>
           </div>
 
-          <div class="form-group">
+          <div class="form-group startTime">
             <label for="startTime">{{strings.modal_starttime}}</label>
-            <input id="newStartTime" ng-model="newStartTime" name="startTime" class="form-control" type="datetime-local">
+            <span class="req-text">(required)</span>
+            <input id="startTime" name="startTime" class="form-control" type="datetime-local">
           </div>
-          <div class="form-group">
-            <label for="startTime">{{strings.modal_endtime}}</label>
-            <input id="newEndTime" ng-model="newEndTime" name="endTime" class="form-control" type="datetime-local">
+          <div class="form-group endTime">
+            <label for="endTime">{{strings.modal_endtime}}</label>
+            <span class="req-text">(required)</span>
+            <input id="endTime" name="endTime" class="form-control" type="datetime-local">
           </div>
         </div>
         <div class="modal-footer">
