--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -112,11 +112,10 @@
           </div>
           <div class="form-group">
             <label for="category">{{strings.app_categories}}</label>
-            <select class="form-control" id="category" ng-model="categories">
-              <option value="cat1">Cat 1</option>
-              <option value="cat2">Cat 2</option>
-              <option value="cat3">Cat 3</option>
+            <select ng-model="selected_category" ng-options="item as item.label for item in event_categories" class="form-control">
+                <option value="">---Please select---</option>
             </select>
+
           </div>
 
           <div class="form-group startTime">
