--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -38,6 +38,8 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/factories.js"></script>
+  <script src="js/directives.js"></script>
+  <script src="js/filters.js"></script>
   <script src="js/utils.js"></script>
 
 
