--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -69,7 +69,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
-              <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category.key)">{{category.label}}</a></li>
+              <li ng-repeat="category in event_categories"><a href="#" ng-click="filter_category(category.label)">{{category.label}}</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#" ng-click="filter_category('all')">All {{strings.app_categories}}</a></li>
 
