--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -34,6 +34,7 @@
 
   <link href="bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
+  <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
@@ -65,7 +66,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="" ng-click="createEventCurrentlocation()">{{strings.app_action}}</a></li>
+          <li><a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}" style="font-size:20px"><i class="glyphicon glyphicon-map-marker"></i></a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
@@ -125,7 +126,7 @@
           <div class="form-group startTime">
             <label for="startTime">{{strings.modal_starttime}}</label>
             <span class="req-text">(required)</span>
-            <input id="startTime" name="startTime" class="form-control" type="datetime-local">
+            <input id="startTime" name="startTime" min="" class="form-control" type="datetime-local">
           </div>
           <div class="form-group endTime">
             <label for="endTime">{{strings.modal_endtime}}</label>
