--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -122,9 +122,12 @@
 
           </div>
 
+          <div class="form-group backwardsTime alert-inline" style="display:none">
+            Cannot have an event that starts after it ends.
+          </div>
           <div class="form-group startTime">
             <label for="startTime">{{strings.modal_starttime}}</label>
-            <span class="req-text">(required)</span>
+            <span class="req-text">(required)</span> <span class="tooEarly alert-inline" style="display:none">&nbsp;&nbsp;Cannot start events in the past.</span>
             <input id="startTime" name="startTime" class="form-control" type="datetime-local">
           </div>
           <div class="form-group endTime">
