TLMBLGIS-44 - add vaicons

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>{{strings.app_name}}
   </title>
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+  <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/custom.css" media="screen" title="no title" charset="utf-8">
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
