--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{{strings.app_name}}
+  <title>Ocellus
   </title>
   <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
   <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/custom.css" media="screen" title="no title" charset="utf-8">
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
   </script>
   <script src="bower_components/jquery/jquery.min.js"></script>
@@ -37,13 +37,9 @@
   <link href="bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css" rel="stylesheet">
   <script src="bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
   <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
+  <script src="js/dist/all.min.js"></script>
 
-  <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/factories.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/utils.js"></script>
+
 
 
   <style media="screen">
