--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -79,13 +79,16 @@
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
-            <input id="eventSwitch" type="checkbox" checked data-toggle="toggle" data-on="Current" data-off="Upcoming" data-onstyle="primary" data-offstyle="primary">
           </div>
         </form>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Debug<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
+              <li><a href="" ng-click="switchViews('/api/events/current/','Current')">Current</a></li>
+              <li><a href="" ng-click="switchViews('/api/events/upcoming/','Upcoming')">Upcoming</a></li>
+              <li><a href="" ng-click="showMyEvents()">My events</a></li>
+              <li role="separator" class="divider"></li>
               <li><a>Current center: <strong>{{center.lat}} {{center.lng}}</strong> </a></li>
               <li><a>Markers: <strong>{{markersAll.length}}</strong></a></li>
               <li><a>Cat Filtered Markers: <strong>{{markers.length}}</strong></a></li>
@@ -138,6 +141,23 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary" id="postBof">{{strings.modal_post}}</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="myEventsModal" tabindex="-1" role="dialog" aria-labelledby="myEventsLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myEventsLabel">My Events</h4>
+        </div>
+        <div class="modal-body">
+          <div ng-include="'views/myevents.html'">
+          </div>
         </div>
       </div>
     </div>
