--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -58,13 +58,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">{{strings.app_name}}</a>
+        <span class="navbar-brand" href="#">{{strings.app_name}}  <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}" style="font-size:20px"><i class="glyphicon glyphicon-map-marker"></i></a></span>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}" style="font-size:20px"><i class="glyphicon glyphicon-map-marker"></i></a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
             <ul class="dropdown-menu" id="categories">
