--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -132,12 +132,12 @@
           </div>
           <div class="form-group startTime">
             <label for="startTime">{{strings.modal_starttime}}</label>
-            <span class="req-text">(required)</span><span class="tooEarly alert-inline" style="display:none">&nbsp;&nbsp;Cannot start events in the past.</span>
+            <span class="req-text">(required)</span>
             <input id="startTime" name="startTime" min="" class="form-control" type="datetime-local">
           </div>
           <div class="form-group endTime">
             <label for="endTime">{{strings.modal_endtime}}</label>
-            <span class="req-text">(required)</span>
+            <span class="req-text">(required)</span><span class="endToSoon alert-inline" style="display:none">&nbsp;&nbsp;Cannot end events in the past.</span>
             <input id="endTime" name="endTime" min="" class="form-control" type="datetime-local">
           </div>
         </div>
