--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -9,41 +9,11 @@
   <link rel="apple-touch-icon" href="images/apple-touch-icon-180x180.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/custom.css" media="screen" title="no title" charset="utf-8">
-  <script src="bower_components/leaflet/dist/leaflet.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
-  </script>
-  <script src="bower_components/jquery/jquery.min.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
-  <script src="bower_components/ui-leaflet/dist/ui-leaflet.min.js"></script>
   <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.css">
   <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css">
-
   <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css">
-  <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js"></script>
-
-  <link rel="stylesheet" href="bower_components/leaflet-draw/dist/leaflet.draw.css">
-  <script src="bower_components/leaflet-draw/dist/leaflet.draw.js"></script>
-  <script src="bower_components/underscore/underscore-min.js"></script>
-  <script src="bower_components/moment/min/moment.min.js"></script>
-
-  <script src="//maps.google.com/maps/api/js?v=3.22"></script>
-  <script src="../bower_components/leaflet-plugins/layer/tile/Google.js"></script>
-
-
-  <link href="bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css" rel="stylesheet">
-  <script src="bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
-  <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
-  <script src="js/dist/all.min.js"></script>
-
-
-
-
-  <style media="screen">
-  </style>
 </head>
 
 <body ng-controller="mapController">
@@ -165,6 +135,24 @@
       </div>
     </div>
   </div>
+
+  <!-- libraries -->
+  <script src="bower_components/leaflet/dist/leaflet.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
+  </script>
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
+  <script src="bower_components/ui-leaflet/dist/ui-leaflet.min.js"></script>
+  <script src="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js"></script>
+  <script src="bower_components/underscore/underscore-min.js"></script>
+  <script src="bower_components/moment/min/moment.min.js"></script>
+  <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
+  <!-- grunt concatenated app files -->
+  <script src="js/dist/all.min.js"></script>
+
+
 
 </body>
 
