temp-user-edit - add user to context, rough in edit modal

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -75,7 +75,7 @@
 
   <leaflet lf-center="center" controls="controls" layers="layers" markers="markersFiltered" width="100%"></leaflet>
 
-  <!-- Modal -->
+  <!-- Create Modal -->
   <div class="modal fade" id="bofModal" tabindex="-1" role="dialog" aria-labelledby="bofModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -91,7 +91,7 @@
           </div>
           <div class="form-group">
             <label for="category">{{strings.app_categories}}</label>
-            <select ng-model="selected_category" ng-options="item as item.label for item in event_categories" class="form-control">
+            <select ng-model="selected_category" ng-options="item as item for item in event_categories" class="form-control">
                 <option value="">---Please select---</option>
             </select>
 
@@ -119,8 +119,55 @@
     </div>
   </div>
 
+  <!-- Edit Modal -->
+  <div class="modal fade" id="bofModalEdit" tabindex="-1" role="dialog" aria-labelledby="bofModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group eventText">
+            <label for="eventText">{{strings.modal_description}}</label>
+            <span class="req-text">(required)</span>
+            <textarea ng-model="editEvent.message" class="form-control" id="eventTextEdit" rows="3" required></textarea>
+          </div>
+          <div class="form-group">
+            <label for="category">{{strings.app_categories}}</label>
+            {{editEvent.category}}
+            <select ng-model="editEvent.category" class="form-control">
+              <option> -- select a category -- </option>
+              <option ng-repeat="category in event_categories" value="{{category}}">{{category}}</option>
+            </select>
 
-  <!-- Modal -->
+          </div>
+
+          <div class="form-group backwardsTime alert-inline" style="display:none">
+            Cannot have an event that starts after it ends.
+          </div>
+          <div class="form-group startTime">
+            <label for="startTime">{{strings.modal_starttime}}</label>
+            <span class="req-text">(required)</span>
+            <input id="startTimeEdit" value="" ng-model="editEvent.startTime" name="startTime" min="" class="form-control" type="datetime-local">
+          </div>
+          <div class="form-group endTime">
+            <label for="endTime">{{strings.modal_endtime}}</label>
+            <span class="req-text">(required)</span><span class="endToSoon alert-inline" style="display:none">&nbsp;&nbsp;Cannot end events in the past.</span>
+            {{editEvent.endTime | date:'yyyy-MM-dd HH:mm'}}
+            <input id="endTimeEdit" value="" ng-model="editEvent.endTime" name="endTime" min="" class="form-control" type="datetime-local">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="postBof">{{strings.modal_post}}</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- My Events Modal -->
   <div class="modal fade" id="myEventsModal" tabindex="-1" role="dialog" aria-labelledby="myEventsLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
