--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -136,7 +136,7 @@
           <div class="form-group eventText">
             <label for="eventTextEdit">{{strings.modal_description}}</label>
             <span class="req-text">(required)</span>
-            <textarea class="form-control" id="eventTextEdit" rows="3" required></textarea>
+            <textarea class="form-control" id="eventTextEdit" rows="3" required ng-model="editEvent.message"></textarea>
           </div>
           <div class="form-group">
             <label for="categoryEdit">{{strings.app_categories}}</label>
