--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -115,6 +115,17 @@
             <span class="req-text">(required)</span><span class="endToSoon alert-inline" style="display:none">&nbsp;&nbsp;Cannot end events in the past.</span>
             <input id="endTime" name="endTime" min="" class="form-control" type="datetime-local">
           </div>
+          <div class="form-group hashTagAndAddess">
+            <label for="hashtag" class="sr-only">Hashtags</label>
+            <input id="hashtag" name="hashtag"  class="form-control" type="text" placeholder="Hashtags">
+          </div>
+          <div class="input-group address">
+            <label for="address" class="sr-only">Address</label>
+            <input id="address" name="address"  class="form-control" type="text" placeholder="Address">
+            <span class="input-group-btn">
+              <button class="btn btn-secondary" type="button" ng-click="lookUpAddress()">Look up</button>
+            </span>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
