TLMBLGIS-80 - better button names

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -122,11 +122,11 @@
           <label for="address" class="sr-only">Address</label>
           <div class="input-group address">
             <span class="input-group-btn">
-              <button class="btn btn-primary" type="button" ng-click="lookUpAddress('google')">Look up (Goo)</button>
+              <button class="btn btn-primary" type="button" ng-click="lookUpAddress('google')">Google</button>
             </span>
             <input id="address" name="address"  class="form-control" type="text" placeholder="Address">
             <span class="input-group-btn">
-              <button class="btn btn-primary" type="button" ng-click="lookUpAddress('openstreet')">Look up (OpSt)</button>
+              <button class="btn btn-primary" type="button" ng-click="lookUpAddress('openstreet')">Open Street</button>
             </span>
           </div>
         </div>
