--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand" href="#">{{strings.app_name}}  <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}" style="font-size:20px"><i class="glyphicon glyphicon-map-marker"></i></a></span>
+        <span class="navbar-brand" href="#">{{strings.app_name}}  <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}" style="font-size:20px"><i class="glyphicon glyphicon-map-marker"></i></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,9 +42,9 @@
               <li><a href="#" ng-click="filter_category('all')">All {{strings.app_categories}}</a></li>
             </ul>
           </li>
-
         </ul>
         <form class="navbar-form navbar-left" role="search">
+          <a class="btn btn-link" href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address">Look up location</a></span>
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
           </div>
@@ -198,6 +198,36 @@
       </div>
     </div>
   </div>
+
+  <!-- Coords LookUp Modal -->
+  <div class="modal fade" id="coordsLookUpModal" tabindex="-1" role="dialog" aria-labelledby="coordsLookUpLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="coordsLookUpLabel">Address lookup</h4>
+        </div>
+        <div class="modal-body">
+          <div class="input-group">
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button" ng-click="lookUpCoords('openst')">Get Coords (OS)</button>
+            </span>
+            <input type="text" class="form-control" placeholder="Address" value="" ng-model="coordsLookUp">
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button" ng-click="lookUpCoords('google')">Get Coords (G)</button>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
 
   <!-- libraries -->
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
