--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -22,17 +22,28 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ocellusNav" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <span class="navbar-brand" href="#">{{strings.app_name}}  <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}" style="font-size:20px"><i class="glyphicon glyphicon-map-marker"></i></a>
+        <span class="navbar-brand" href="#">{{strings.app_name}}</span>
       </div>
 
+
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="ocellusNav">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Create Event <span class="caret"></span></a>
+            <ul class="dropdown-menu" id="categories">
+              <li> <a href="" ng-click="createEventCurrentlocation()" title="{{strings.app_action}}">Create event at current location</a></li>
+              <li><a href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address">Create event at specified address</a></li>
+            </ul>
+          </li>
+        </ul>
+
         <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{strings.app_categories}} <span class="caret"></span></a>
@@ -44,11 +55,11 @@
           </li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
-          <a class="btn btn-link" href="" data-toggle="modal" data-target="#coordsLookUpModal" title="Input Address">Look up location</a></span>
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
           </div>
         </form>
+
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
@@ -117,10 +128,8 @@
             <label for="hashtag" class="sr-only">Hashtags</label>
             <input id="hashtag" name="hashtag"  class="form-control" type="text" placeholder="Hashtags">
           </div>
-          {{newEventLoc}}
           <label for="address" class="sr-only">Address</label>
           <div class="input-group address">
-
             <span class="input-group-btn">
               <button class="btn btn-primary" type="button" ng-click="lookUpAddress('google')">Google</button>
             </span>
@@ -214,16 +223,20 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="coordsLookUpLabel">Address lookup</h4>
+          <h4 class="modal-title" id="coordsLookUpLabel">Specify Address</h4>
         </div>
         <div class="modal-body">
+          <div class="alert alert-warning" role="alert" ng-show="addressTooShort">
+            Please supply a more detailed address.
+          </div>
+
           <div class="input-group">
             <span class="input-group-btn">
-              <button class="btn btn-primary" type="button" ng-click="lookUpCoords('openst')">Get Coords (OS)</button>
+              <button class="btn btn-primary" type="button" ng-click="lookUpCoords('openst')">Verify Address (OS)</button>
             </span>
             <input type="text" class="form-control" placeholder="Address" value="" ng-model="coordsLookUp">
             <span class="input-group-btn">
-              <button class="btn btn-primary" type="button" ng-click="lookUpCoords('google')">Get Coords (G)</button>
+              <button class="btn btn-primary" type="button" ng-click="lookUpCoords('google')">Verify Address (G)</button>
             </span>
           </div>
           <p  ng-show="addressLookupResults.length"></p>
@@ -237,20 +250,12 @@
           <div class="list-group">
             <a href="" ng-click="selectLocation(location)" class="list-group-item" ng-repeat="location in addressLookupResults">
               {{location.locationName}}
-              {{location.coords}}
             </a>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
 
   <!-- libraries -->
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
