--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -46,6 +46,7 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html">Map</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Showing {{currentView}} <span class="caret"></span></a>
             <ul class="dropdown-menu">
