--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -99,6 +99,11 @@
           <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
         </div>
         <div class="modal-body">
+          <div class="form-group eventTitle">
+            <label for="eventText">Title</label>
+            <span class="req-text">(required)</span>
+            <input type="text" ng-model="newEventTitle" class="form-control" id="eventTitle" required></textarea>
+          </div>
           <div class="form-group eventText">
             <label for="eventText">{{strings.modal_description}}</label>
             <span class="req-text">(required)</span>
@@ -156,6 +161,11 @@
           <h4 class="modal-title" id="bofModalEditLabel">Edit Event</h4>
         </div>
         <div class="modal-body">
+          <div class="form-group eventTitle">
+            <label for="eventTextEdit">Title</label>
+            <span class="req-text">(required)</span>
+            <input type="text" ng-model="editEvent.title" class="form-control" id="eventTitleEdit" required></textarea>
+          </div>
           <div class="form-group eventText">
             <label for="eventTextEdit">{{strings.modal_description}}</label>
             <span class="req-text">(required)</span>
