--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -99,7 +99,7 @@
           <h4 class="modal-title" id="bofModalLabel">{{strings.modal_title}}</h4>
         </div>
         <div class="modal-body">
-          <div class="form-group eventTitle">
+          <div class="form-group title">
             <label for="eventText">Title</label>
             <span class="req-text">(required)</span>
             <input type="text" ng-model="newEventTitle" class="form-control" id="eventTitle" required></textarea>
@@ -161,7 +161,7 @@
           <h4 class="modal-title" id="bofModalEditLabel">Edit Event</h4>
         </div>
         <div class="modal-body">
-          <div class="form-group eventTitle">
+          <div class="form-group title">
             <label for="eventTextEdit">Title</label>
             <span class="req-text">(required)</span>
             <input type="text" ng-model="editEvent.title" class="form-control" id="eventTitleEdit" required></textarea>
