--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -174,6 +174,8 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js">
   </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJfRs5m2aIl3cKjMy0es9Fh6-EJeXpP4k" async defer></script>
+  <script src="../bower_components/leaflet-plugins/layer/tile/Google.js"></script>
   <script src="bower_components/jquery/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
