TLMBLGIS-93 - 1st a11y pass

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -56,7 +56,8 @@
         </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
+            <label for="searchText" class="sr-only">Search events</label>
+            <input type="text" id="searchText" class="form-control" placeholder="Search" value="" ng-model="markerFilter">
           </div>
         </form>
 
