TLMBLGIS-93 - more changes for a11y of modals

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="postBof">{{strings.modal_post}}</button>
+          <button type="button" class="btn btn-primary" id="postBof" ng-click="postEvent()">{{strings.modal_post}}</button>
         </div>
       </div>
     </div>
