--- a/mbofui/app/text-only.html
+++ b/mbofui/app/text-only.html
@@ -102,7 +102,7 @@
           </p>
         </td>
         <td class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="text-align:right">
-          <button data-toggle="modal" data-target="#bofModalEdit" data-event="{{event}}" ng-if="event.mine && event.inTime" type="button" class="btn btn-primary editEvent">Edit <span class="sr-only">{{event.title}}</span></button>
+          <button data-toggle="modal" data-target="#bofModalEdit" data-event="{{event}}" ng-if="event.mine && event.inTime" type="button" class="btn btn-primary editEvent">Edit <span class="sr-only">{{event.title}} event</span></button>
         </td>
       </tr>
     </table>
@@ -121,7 +121,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="postBof">{{strings.modal_post}}</button>
+            <button type="button" class="btn btn-primary" ng-click="postEvent()">{{strings.modal_post}}</button>
           </div>
         </div>
       </div>
