TLMBLGIS-117 - one more try

--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.css">
   <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css">
   <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css">
-  <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBJfRs5m2aIl3cKjMy0es9Fh6-EJeXpP4k" async defer></script>
+  <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
 </head>
 
 <body ng-app="ocellus" ng-controller="mapController">
