--- a/mbofui/app/index.html
+++ b/mbofui/app/index.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.css">
   <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css">
   <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css">
-  <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
 </head>
 
 <body ng-app="ocellus" ng-controller="mapController">
@@ -186,6 +185,8 @@
   <script src="bower_components/underscore/underscore-min.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
   <script src="bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
+  <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBJfRs5m2aIl3cKjMy0es9Fh6-EJeXpP4k"></script>
+
   <!-- grunt concatenated app files -->
   <script src="js/dist/all.min.js"></script>
 
